# testtask

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/ps/: main.py
src/ps/alembic/: __main__.py  alembic.ini  env.py
src/ps/alembic/versions/: 04f74935f474_initial_migration.py
src/ps/apps/: __init__.py  auth.py  payment.py
src/ps/conf/: __init__.py
src/ps/messagebus/: __init__.py  broker.py  main.py
src/ps/messagebus/apps/: payment.py
src/ps/models/: __init__.py  base.py  outbox.py  payment.py
src/ps/schemas/: payment.py
tests/: Dockerfile  conftest.py
tests/func/: test_create_payment.py
tests/mocks/: webhookprocessor.py
tests/unit/: conftest.py  test_basic.py
tests/utils/: models.py
