[tool.poetry]
name = "payment_service"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{ include = "ps" , from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.135.2"
uvicorn = "^0.42.0"
psycopg2-binary = "^2"
sqlalchemy = "2.0.48"
asyncpg = "0.31.0"
alembic = "1.18.4"
faststream = { extras = ["rabbit"], version = "0.6.7" }
typer = "0.24.1"
aiohttp = "3.13.4"
remote-pdb = "2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "1.3.0"
requests = "2.33.0"
fastapi = "0.135.2"
uvicorn = "^0.42.0"
docker = "7.1.0"
psycopg2-binary = "^2"
sqlalchemy = "2.0.48"
asyncpg = "0.31.0"
aiohttp = "3.13.4"
faststream = { extras = ["rabbit"], version = "0.6.7" }

[tool.poetry.scripts]
payment = "ps.main:main"
payment-alembic = "ps.alembic.__main__:main"
payment-worker = "ps.messagebus.main:start"

[tool.isort]
profile = "black"
line_length = 120
sections = "FUTURE,STDLIB,THIRDPARTY,OUR_LIBS,FIRSTPARTY,LOCALFOLDER"
known_our_libs = []
no_lines_before = ["LOCALFOLDER"]

[tool.black]
line_length = 120
skip_string_normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
